<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Proyecto06</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_intro">Intro</string>
    <string name="title_activity_settings">settings</string>
    <string name="sonido">Sonido</string>
    <string name="title_activity_amor">Amor</string>
    <string name="title_activity_odio">Odio</string>
    <string name="nuevo_registro">Nuevo</string>
    <string name="title_activity_formulario">Formulario</string>
    <string name="cancelar">Cancelar</string>
    <string name="crear">Crear</string>
    <string name="crear_titulo">Crear título</string>
    <string name="label_id">Id: </string>
    <string name="label_titulo">Título</string>
    <string name="guardar">Guardar</string>
    <string name="descripcion">Descripción</string>
    <string name="megusta">Me gusta</string>
    <string name="ver">Ver</string>
    <string name="nueva">Nueva</string>


</resources>
