<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    tools:context=".ForumLario">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:id="@+id/label_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_id"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/label_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_titulo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="346dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/label_descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <EditText
            android:id="@+id/descripcion"
            android:layout_width="346dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" />

        <CheckBox
            android:layout_marginTop="10dp"
            android:id="@+id/checkBox_megusta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/megusta" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/imageViewFoto"
                android:layout_width="86dp"
                android:layout_height="match_parent"
                android:src="@drawable/camara_de_fotos"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/boton_nueva"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nueva" />

                <Button
                    android:id="@+id/boton_ver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ver" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/botonera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:gravity="bottom|center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/boton_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar" />

            <Button
                android:id="@+id/boton_guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardar" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
